# full-stack-test-project-backend

./: .gitignore  Procfile  env.example  pyproject.toml
apps/api/: urls.py  views.py
apps/authentication/: urls.py
apps/authentication/social_media/: google.py
config/: settings.py  urls.py
